Changelog
=========

4.11.0a3 (unreleased)
---------------------

- Nothing changed yet.


4.11.0a2 (2023-03-21)
---------------------

- Fix availability of cke-save
  [gbastien, gotcha]

- Fix leftover usage of ``portal_properties``.
  [gotcha]

- Fix cke-upload-image URL setup
  [gbastien, gotcha]


4.11.0a1 (2023-03-08)
---------------------

- Update to CKEditor 4.20.2
  [gotcha]

- Migrate configuration from ``portal_properties`` to registry.
  [aduchene, gotcha, kimpaulissen, Mychae1]

- Fix robot tests
  [aduchene]


4.10.1 (2021-10-01)
-------------------

- Fix CKEditor not packaged properly in 4.10.0 release.
  [aduchene]

- Use zest.releaser = 6.22.1.
  [aduchene]


4.10.0 (2021-06-11)
-------------------

- Add disallowedContent option to blacklist content.
  [naro, gotcha]


4.9.1 (2021-02-12)
------------------

- Add Transifex.net service integration to manage the translation process.
  [macagua]

- Add Spanish translation
  [macagua]

- AjaxSave plugin, add message when nothing saved because nothing changed
  (Content already saved (nothing changed).)
  [gbastien]

- AjaxSave plugin, added `async:true` attribute so it is possible to set it
  to `async:false` and make sure content is saved before continuing.
  [gotcha, gbastien]


4.9.0 (2019-09-12)
------------------

- Update to CKEditor 4.12.1
  [gotcha]


4.8.3 (2018-11-13)
------------------

- AjaxSave plugin, defend against not traversable objects like plone.registry
  records
  [gotcha]


4.8.2 (2018-10-12)
------------------

- refactor AjaxSave plugin

  - fix for Archetypes
  - support for plone.app.contenttypes
  - support for formlib portlets

  [gotcha]


4.8.1 (2018-07-10)
------------------

- CKEditor language is coherent with edit view language
  [gotcha]
  


4.8.0 (2018-06-22)
------------------

- Update to CKEditor 4.9.2
  Include not enabled balloontoolbar plugin
  [gotcha]


4.7.2 (2017-12-15)
------------------

- Make `uploadimage` `resolveuid` links relative.
  [gotcha]

