@@ -92,7 +92,7 @@ develop =  %(package_path)s
                 "bin/buildout",
                 "-N",
                 "buildout:eggs-directory=%s" % self.eggs_directory,
-                "instance:zcml=collective.ckeditor:migration-registry.zcml",
+                "instance:zcml=collective.ckeditor:custom-properties.zcml",
                 "plonesite:upgrade-profiles=collective.ckeditor:default",
                 "install",
                 "instance",
@@ -111,6 +111,7 @@ develop =  %(package_path)s
                 "bin/buildout",
                 "-N",
                 "buildout:eggs-directory=%s" % self.eggs_directory,
+                "instance:zcml=collective.ckeditor:migration-registry.zcml",
                 "install",
                 "instance",
                 "plonesite",
