@@ -4,7 +4,8 @@ Changelog
 4.11.0a3 (unreleased)
 ---------------------
 
-- Nothing changed yet.
+- Polish upgrade to registry
+  [gotcha]
 
 
 4.11.0a2 (2023-03-21)
